@@ -1,14 +1,0 @@
-<?php
-$module['calendar']['description'] = 'In a corporate environment a shared calendar can\'t '.
-		'be missed. This calendar allows you to plan all sorts of recurring events '.
-		'and set reminders for them.	The easy to use interface will never let you '.
-		'miss an event.';
-$module['calendar']['version'] = '3.1';
-$module['calendar']['release_date'] = '2006-11-24';
-$module['calendar']['status'] = 'Stable';
-$module['calendar']['authors'][] = array('name'=>'Merijn Schering', 'email'=>'mschering@intermesh.nl');
-$module['calendar']['authors'][] = array('name'=>'Georg Lorenz', 'email'=>'georg@lonux.de');
-$module['calendar']['sort_order'] = '40';
-$module['calendar']['linkable_items'][] = array('url'=>'event.php', 'language'=>'sc_new_app', 'button'=>'cal_compose');
-$module['calendar']['linkable_items'][] = array('url'=>'event.php?todo=1', 'language'=>'cal_add_todo', 'button'=>'todos_new');
-?>
